# vg-music-scrapper

./: .gitignore  README.md  example.json  pyproject.toml
vg_music_scraper/: __init__.py  __main__.py  album.py  cmdline.py  config.py  constant.py  downloader.py  song.py  utils.py
